--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -7,12 +7,12 @@
     <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
     <meta name='viewport' content='width=device-width' />
     <meta name='generator' content={Astro.generator} />
-    <title>Astro</title>
+    <title>About</title>
   </head>
   <body>
     <a href='/'>Home</a>
     <a href='/about'>About</a>
     <a href='/writing'>Writing</a>
-    <h1>Home</h1>
+    <h1>About</h1>
   </body>
 </html>
