--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,8 @@
 ---
 import FlexContainer from '../components/FlexContainer';
 import Dialog from '../components/Dialog';
-import { ChevronUpIcon } from '@radix-ui/react-icons';
+import ProjectList from '../components/ProjectList';
+import { projects } from '../utils/projects';
 ---
 
 <html lang='en'>
@@ -24,19 +25,20 @@ import { ChevronUpIcon } from '@radix-ui/react-icons';
       <FlexContainer className='xs:flex-col xs:items-center xs:mb-4'>
         <!-- <ChevronUpIcon /> -->
         <Dialog client:load>
-          <ul
+          <ProjectList projects={projects} />
+          <!-- <ul
             class='flex flex-col items-center w-screen h-screen space-y-10 pt-4 overflow-y-scroll'
-          >
-            <li class='border border-black px-24 py-8 text-6xl'>Work 1</li>
+          > -->
+
+          <!-- <li class='border border-black px-24 py-8 text-6xl'>Work 1</li>
             <li class='border border-black px-24 py-8 text-6xl'>Work 2</li>
             <li class='border border-black px-24 py-8 text-6xl'>Work 3</li>
             <li class='border border-black px-24 py-8 text-6xl'>Work 4</li>
             <li class='border border-black px-24 py-8 text-6xl'>Work 5</li>
-            <li class='border border-black px-24 py-8 text-6xl'>Work 6</li>
-          </ul>
+            <li class='border border-black px-24 py-8 text-6xl'>Work 6</li> -->
         </Dialog>
-        <!-- <p>Index</p> -->
       </FlexContainer>
+      <!-- <p>Index</p> -->
     </FlexContainer>
   </body>
 </html>
