--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,11 @@ import { projects } from '../utils/projects';
       <FlexContainer className='xs:flex-col xs:items-center xs:mb-4'>
         <!-- <ChevronUpIcon /> -->
         <Dialog client:load>
-          <ProjectList client:load projects={projects} />
+          <ProjectList
+            client:load
+            className='flex flex-col items-center space-y-10 w-screen h-screen pt-4 overflow-y-scroll'
+            projects={projects}
+          />
           <!-- <ul
             class='flex flex-col items-center w-screen h-screen space-y-10 pt-4 overflow-y-scroll'
           > -->
