--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import { projects } from '../utils/projects';
     <meta name='generator' content={Astro.generator} />
     <title>Astro</title>
   </head>
-  <body>
+  <body class='overflow-y-hidden'>
     <FlexContainer className='xs:flex-col xs:h-screen xs:items-center'>
       <FlexContainer className='xs:h-full xs:justify-center xs:items-center'>
         <div class='xs:w-full sm:w-6/12 px-4'>
@@ -25,11 +25,7 @@ import { projects } from '../utils/projects';
       <FlexContainer className='xs:flex-col xs:items-center xs:mb-4'>
         <!-- <ChevronUpIcon /> -->
         <Dialog client:load>
-          <ProjectList
-            client:load
-            className='flex flex-col items-center space-y-10 w-screen h-screen pt-4 overflow-y-scroll'
-            projects={projects}
-          />
+          <ProjectList client:load className='space-y-10' projects={projects} />
           <!-- <ul
             class='flex flex-col items-center w-screen h-screen space-y-10 pt-4 overflow-y-scroll'
           > -->
