--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import { projects } from '../utils/projects';
     <meta name='generator' content={Astro.generator} />
     <title>Astro</title>
   </head>
-  <body class='overflow-y-hidden'>
+  <body class='overflow-y-hidden bg-base'>
     <FlexContainer className='xs:flex-col xs:h-screen xs:items-center'>
       <FlexContainer className='xs:h-full xs:justify-center xs:items-center'>
         <div class='xs:w-full sm:w-6/12 px-4'>
@@ -22,10 +22,14 @@ import { projects } from '../utils/projects';
           </p>
         </div>
       </FlexContainer>
-      <FlexContainer className='xs:flex-col xs:items-center xs:mb-4'>
+      <FlexContainer className='xs:flex-col xs:justify-center xs:mb-4'>
         <!-- <ChevronUpIcon /> -->
         <Dialog client:load>
-          <ProjectList client:load className='space-y-10' projects={projects} />
+          <ProjectList
+            client:load
+            className='flex xs:flex-col xs:items-center mx-4 space-y-10'
+            projects={projects}
+          />
           <!-- <ul
             class='flex flex-col items-center w-screen h-screen space-y-10 pt-4 overflow-y-scroll'
           > -->
