--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import { projectData } from '../utils/projects';
     <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
     <meta name='viewport' content='width=device-width' />
     <meta name='generator' content={Astro.generator} />
-    <title>Astro</title>
+    <title>Tristan Espinoza</title>
   </head>
   <body class='overflow-y-hidden bg-base'>
     <FlexContainer className='xs:flex-col xs:h-screen xs:items-center'>
