--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ import { projectData } from '../utils/projects';
         <Dialog client:load buttonClass='mt-10'>
           <ProjectList
             client:load
-            className='flex xs:flex-col items-center xs:py-8 xs:space-y-4 xs:h-[calc(100%-116px)] overflow-y-scroll '
+            className='flex xs:flex-col items-center xs:py-8 xs:space-y-4 xs:h-[calc(100%-168px)] sm:h-[calc(100%-116px)] overflow-y-scroll '
             projects={projectData}
           />
         </Dialog>
