fix: added local base styles

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import FlexContainer from '../components/FlexContainer';
 import Dialog from '../components/Dialog';
 import ProjectList from '../components/ProjectList';
 import { projectData } from '../utils/projects';
+import '../styles/base.css';
 ---
 
 <html lang='en'>
