--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,10 @@ import '../styles/base.css';
   <head>
     <meta charset='utf-8' />
     <!-- <link rel='icon' type='image/svg+xml' href='/favicon.svg' /> -->
-    <meta name='viewport' content='width=device-width, initial-scale=1' />
+    <meta
+      name='viewport'
+      content='viewport-fit=cover, width=device-width, initial-scale=1'
+    />
     <meta name='generator' content={Astro.generator} />
     <title>Tristan Espinoza</title>
   </head>
