fix: vh units instead of percent for list

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,7 +30,7 @@ import '../styles/base.css';
         <Dialog client:load buttonClass='mt-10'>
           <ProjectList
             client:load
-            className='flex xs:flex-col items-center xs:py-8 xs:space-y-4 xs:h-[calc(100%-116px)] overflow-y-scroll '
+            className='flex xs:flex-col items-center xs:py-8 xs:space-y-4 xs:h-[calc(100vh-116px)] overflow-y-scroll '
             projects={projectData}
           />
         </Dialog>
