--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import '../styles/base.css';
     <!-- <link rel='icon' type='image/svg+xml' href='/favicon.svg' /> -->
     <meta
       name='viewport'
-      content='viewport-fit=cover, width=device-width, initial-scale=1'
+      content=', width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover'
     />
     <meta name='generator' content={Astro.generator} />
     <title>Tristan Espinoza</title>
