fix: testing bottom safe area

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -6,4 +6,7 @@
   .pb-safe {
     padding-bottom: calc(env(safe-area-inset-bottom) + 1rem);
   }
+  .bottom-safe {
+    bottom: calc(env(safe-area-inset-bottom) + 1rem);
+  }
 }
