fix: still troubleshooting safe area issues

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -4,9 +4,6 @@
 
 @layer utilities {
   .pb-safe {
-    padding-bottom: calc(env(safe-area-inset-bottom) + 1rem);
-  }
-  .bottom-safe {
-    bottom: calc(env(safe-area-inset-bottom) + 1rem);
+    padding-bottom: calc(env(Safe-area-inset-bottom) + 1rem);
   }
 }
